<resources>
    <string name="app_name">Moje Knihy</string>
    <string name="title_home">Knihy</string>
    <string name="title_category">Kategória</string>
    <string name="title_book">Kniha</string>
    <string name="book_name">Názov knihy</string>
    <string name="author">Autor</string>
    <string name="year">Rok vydania</string>
    <string name="book_state">Stav knihy</string>

    <string name="title">Nazov knihy: %s</string>
    <string name="published_year">Rok vydania: %d</string>
    <string name="authorStr">Autor: %s</string>
    <string name="category_name">Názov kategórie</string>
    <string name="category_btn">Pridať</string>
    <string name="add_category">Kategória pridaná</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookName">Názov knihy</string>
    <string name="notes">Pridať poznámky</string>
    <string name="authorText">Autor:</string>
    <string name="yearText">Rok vydania:</string>
    <string name="book_stateText">Stav:</string>
    <string name="photo">odfotiť</string>
    <string name="choose_photo">Vybrať obrázok</string>
    <string name="cancel_btn">Zavrieť</string>
    <string name="confirm">OK</string>
    <string name="open">Otvoriť</string>
    <string name="delete">Vymazať?</string>
    <string name="new_photo">Nová fotka</string>
    <string name="yes">Áno</string>
    <string name="no">Nie</string>
    <string name="capture_photo">Fotoaparát</string>
    <string name="choose_picture">Galéria</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string-array
        name="image_dialog">
        <item>Fotoaparát</item>
        <item>Galéria</item>
    </string-array>


</resources>