<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.book.BookFragment">

        <EditText
            android:id="@+id/bookName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:hint="@string/book_name"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/author"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/bookName"
            app:layout_constraintStart_toStartOf="@+id/bookName"
            app:layout_constraintTop_toBottomOf="@+id/bookName" />

        <EditText
            android:id="@+id/year"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/year"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/author"
            app:layout_constraintStart_toStartOf="@+id/author"
            app:layout_constraintTop_toBottomOf="@+id/author" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/categorySpinner"
            app:layout_constraintStart_toStartOf="@+id/categorySpinner"
            app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/year"
            app:layout_constraintStart_toStartOf="@+id/year"
            app:layout_constraintTop_toBottomOf="@+id/year" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="141dp"
            android:layout_height="116dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="80dp"
            android:src="@drawable/add_phote_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>